--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,19 @@
 	margin: 0 auto;
 	padding: 2rem;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.app {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
+}
+
+.app > footer {
+	margin-top: auto;
 }
 
 .logo {
